exports[`finish_plan renderCall > no plan, isPartial — title + path only (no plan to expand) 1`] = `
[39m[1mfinish_plan[22m[39m [38;2;138;190;183m/tmp/planning-snapshot-test/PLAN.md[39m                                 
`;

exports[`finish_plan renderCall > no plan, not partial, not expanded — title + path only 1`] = `
[39m[1mfinish_plan[22m[39m [38;2;138;190;183m/tmp/planning-snapshot-test/PLAN.md[39m                                 
`;

exports[`finish_plan renderCall > plan present, expanded — title + path + plan markdown 1`] = `
[39m[1mfinish_plan[22m[39m [38;2;138;190;183m/tmp/planning-snapshot-test/PLAN.md[39m                                 
[38;2;240;198;116m[1m[4mMy Plan[24m[22m[39m                                                                         
                                                                                
[38;2;138;190;183m1. [39mStep one                                                                     
[38;2;138;190;183m2. [39mStep two                                                                     
[38;2;138;190;183m3. [39mStep three                                                                   
`;

exports[`finish_plan renderCall > plan present, isPartial — title + path + plan markdown 1`] = `
[39m[1mfinish_plan[22m[39m [38;2;138;190;183m/tmp/planning-snapshot-test/PLAN.md[39m                                 
[38;2;240;198;116m[1m[4mMy Plan[24m[22m[39m                                                                         
                                                                                
[38;2;138;190;183m1. [39mStep one                                                                     
[38;2;138;190;183m2. [39mStep two                                                                     
[38;2;138;190;183m3. [39mStep three                                                                   
`;

exports[`finish_plan renderCall > plan present, not partial, not expanded — title + path only 1`] = `
[39m[1mfinish_plan[22m[39m [38;2;138;190;183m/tmp/planning-snapshot-test/PLAN.md[39m                                 
[38;2;102;102;102m(ctrl+o to show plan)[39m                                                           
`;

exports[`finish_plan renderResult > error — red error message 1`] = `
[38;2;204;102;102mError: No plan file found. Write your plan to                                   
[38;2;204;102;102m/tmp/planning-snapshot-test/PLAN.md before using this tool.[39m                     
`;

exports[`finish_plan renderResult > success, expanded — separator + dim status text 1`] = `
[38;2;80;80;80m────────────────────────────────────────────────────────────────────────────────[39m
[38;2;102;102;102mPlan approved. Begin implementing.[39m                                              
`;

exports[`finish_plan renderResult > success, not expanded — dim status text 1`] = `
[38;2;102;102;102mPlan approved. Begin implementing.[39m                                              
`;
